# Graphyt

./: .gitignore  BoundaryConditions.cpp  BoundaryConditions.hpp  BoundaryConditions.i  CMakeLists.txt  ConstitutiveModels.cpp  ConstitutiveModels.hpp  DamageModels.cpp  DamageModels.hpp  Extrapolation.cpp  Extrapolation.hpp  Grid.cpp  Grid.hpp  LICENSE.txt  MaterialModels.cpp  MaterialModels.hpp  MaterialModels.i  MaterialPoints.cpp  MaterialPoints.hpp  MaterialPoints.i  Matrix.cpp  Matrix.h  Matrix.i  Nodes.cpp  Nodes.hpp  Nodes.i  Parameters.cpp  Parameters.hpp  Parameters.i  Solver.cpp  Solver.cu  Solver.hpp  Solver.i  TimeIntegration.cpp  TimeIntegration.cu  TimeIntegration.hpp  eig3.cpp  eig3.h  eig3.i  gcVector.hpp  (+5 more)
Example_Scripts/: brazillian2D.py  dambreak_2D.py  singleFlawTest_rounded_60Deg_wRigid.py  twoDisks.py
Examples/: .compression_DruckerPrager.py.swp  MFN02_damBreak2D.py  acoustofluidicTest.py  ballDrop.py  bigsingleFlawTest.py  brazillian2D.py  brazillian3D.py  brazillianKidneyStone.py  bullet.py  compression_DruckerPrager.py  compression_Elastic.py  compression_PerfectPlastic.py  contactTestRolling.py  damageScript.sh  damageTest.py  damage_separationTest2D.py  dambreak_2D.py  dambreak_3D.py  diskDrop.py  droptest2D.py  extrusionTest2D.py  fsi_damBreak2D.py  genFracture.py  generalExam.py  grainTest.py  graphytPyckTEMPLATE.py  helmet.py  hill.py  hydrostaticCOUPLED.py  inclinedPlane.py  kidneyStoneCrush.py  landingModule.py  launch.json  lbmGrains.py  pelton.py  periodicTest.py  pousielle2DCOUPLED.py  pousielle2D_wGrain.py  pousielle2D_wPeriodic.py  pressurizedBoreHole2D.py  (+23 more)
install/unix/: set_graphyt_env.sh
install/windows/: graphyt.template.in
test/: test_2d_do_nothing.py  test_2d_elastic_uniaxial_compression.py  test_2d_impact_elastic.py
